force-app/main/default/objects/ACME_Scoring_Configuration__mdt/ACME_Scoring_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type for Lead Scoring Configurations</description>
    <label>ACME Scoring Configuration</label>
    <pluralLabel>ACME Scoring Configurations</pluralLabel>
</CustomObject>