force-app/main/default/objects/ACME_Scoring_Configuration__mdt/fields/ACME_Weight__c.field-meta.xml
<CustomField>
    <fullName>ACME_Weight__c</fullName>
    <label>Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>