force-app/main/default/objects/ACME_Scoring_Configuration__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <fieldType>Checkbox</fieldType>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>