force-app/main/default/objects/ACME_Scoring_Configuration__mdt/fields/Score_Value__c.field-meta.xml
<CustomField>
    <fullName>Score_Value__c</fullName>
    <label>Score Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>